# internal-job-portal

./: .gitignore
deploy/: Dockerfile  cron.md  docker-compose.yml
design/job-portal/: README.md
design/job-portal/chats/: chat1.md
design/job-portal/project/: index.html
design/job-portal/project/src/: app.jsx  aurora.jsx  detail.jsx  filter-rail.jsx  jobcard.jsx  jobs-data.js  scrubber.jsx  sortwheel.jsx  styles.css  tweaks.jsx
docs/superpowers/specs/: 2026-04-23-job-portal-design.md
jobportal/: package.json  pnpm-lock.yaml
jobportal/src/: proxy.ts
jobportal/src/app/: globals.css  layout.tsx  page.tsx
jobportal/src/app/api/job/[id]/: route.ts
jobportal/src/app/api/login/: route.ts
jobportal/src/app/login/: LoginForm.tsx  page.tsx
jobportal/src/components/: Aurora.tsx  FilterRail.tsx  JobCard.tsx  JobDetail.tsx  JobsDashboard.tsx  SalaryScrubber.tsx  SortWheel.tsx
jobportal/src/hooks/: useTweaks.ts
jobportal/src/lib/: auth.ts  jobs.ts  supabase.ts  types.ts
scraper/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
scraper/scraper/: __init__.py  config.py  german_locations.py  normalize.py  run.py  supabase_client.py
scraper/scraper/sources/: bundesagentur_source.py  jobspy_source.py
scraper/tests/: test_normalize.py
supabase/migrations/: 0001_init.sql  0002_seed_profiles.sql
